# digital_store_app

./: .gitignore  README.md  docker-compose.yml  mcp.json  project.md  pyproject.toml
docker-entrypoint-initdb.d/: 10_create_chinook_db.sql  20_load_chinook.sh
prompts/: storefront_system_prompt.txt
scripts/: mcp_proxy.py
tests/: smoke_test.py
tests/pytest/: test_storefront_agent_eval.py  test_storefront_eval.py  test_storefront_no_user_eval.py
tests/pytest/data/: storefront_agent_admin_bait.jsonl  storefront_agent_browse.jsonl  storefront_agent_delete_rows.jsonl  storefront_agent_media_type.jsonl  storefront_agent_pii_leak.jsonl  storefront_agent_price_duration.jsonl  storefront_agent_prompt_leak.jsonl  storefront_agent_tools_leak.jsonl  storefront_basic_prompt.jsonl  storefront_browse_sample.jsonl
